--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,12 @@
-numpy>=1.26.0 
-scikit-learn
+joblib==1.5.0
+numpy==2.2.5
+pandas==2.2.3
+python-dateutil==2.9.0.post0
+pytz==2025.2
+scikit-learn==1.6.1
+scipy==1.15.2
+setuptools==80.3.1
+six==1.17.0
+threadpoolctl==3.6.0
+tzdata==2025.2
+wheel==0.45.1
